# lldb-mcp

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
src/: lldb_session.cpp  lldb_session.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  mcp_tools.cpp  mcp_tools.hpp
tests/: test_args.c  test_bug.c  test_rec.c
